# predictive-engine

./: .env.example  .gitignore  .replit  build_prompt.md  llm_config.example.yml  local_secrets.example.py  package.json  pnpm-lock.yaml  replit.md  start.bat  stop.bat
artifacts/api-server-py/: pyproject.toml
artifacts/api-server-py/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  rate_limit.py  serialize.py
artifacts/api-server-py/app/routers/: __init__.py  agents.py  comments.py  events.py  groups.py  health.py  policies.py  simulations.py
artifacts/api-server-py/app/services/: __init__.py  agent_cohort.py  belief_chart_decode.py  document_text.py  event_suggest_web.py  event_web_search.py  llm_config_loader.py  llm_service.py  neo4j_service.py  prompt_templates.py  simulation_engine.py  simulation_report_llm.py  user_post_reply.py  vertex_document.py
artifacts/api-server-py/predictive_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
artifacts/prediction-engine/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/prediction-engine/.replit-artifact/: artifact.toml
artifacts/prediction-engine/src/: App.tsx  index.css  main.tsx
attached_assets/: Pasted-Perfect-this-is-the-layer-that-turns-your-system-from-i_1774879352931.txt
lib/api-client-react/src/: custom-fetch.ts  index.ts
lib/api-spec/: openapi.yaml  orval.config.ts
lib/db/: package.json
lib/db/scripts/: reset-schema.mjs
lib/db/src/schema/: agents.ts  (+11 more)
policy_sample/: New Text Document.txt
scripts/: enforce-pnpm.cjs  local_secrets_export_dotenv.py
(+24 files in other folders)
